Resolving .bib entries and adding sensitivity and optimization final versions.

--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -173,7 +173,13 @@
   note = {Accessed: 2015-07-20}
 }
 
-
+@book{BFGS,
+ author = {Jorge Nocedal and Stephen Wright},
+ publisher = {Springer Science+Business Media},
+ title = {Numerical Optimization},
+ year = {2006},
+ edition = {First},
+}
 
 
 
